--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-MONGODB_URI=mongodb://localhost:27017/
-DATABASE_NAME=cyber_threat_dashboard
+MONGODB_URI=mongodb+srv://kipkorirjob:1995ArapBett@arap.de7iw.mongodb.net/
+DATABASE_NAME=ARAP
 VIRUSTOTAL_API_KEY=your_actual_virustotal_api_key
 SHODAN_API_KEY=your_actual_shodan_api_key
 SECRET_KEY=7adae06f3a8b869187d81ad3f6e96567254bb3c367cd038f
